ARM/Networking/Site1/af_vnet_azuredeploy1_hbiB.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {


    "commentLocation": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters for the deployment template filter on VNET102"
    },
    "commentVNET": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters from VNET tab, filter on VNET102"
    },
    "commentSubnet": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters from subnet tab, filter on VNET102"
    },
    "commentConnections": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters from Connection tab, filter on VNET102"
    },
    "commentGateway": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters from Gateway tab, filter on VNET102"
    },

    "baseUrl": {
      "defaultValue": "https://github.com/willstg/AzureFoundation/tree/master/arm/vnet/site1",
      "type": "string",
      "metadata": {
        "artifactsBaseUrl": "",
        "description": "URL to acquire other templates"
      }
    },
    /*
    Using the metadata spreadsheet, the VNET tab, filter results on VNET101, 
    Select the columnns that contain the word template and are color coded accordingly.
    */
    "locationName": {
      "type": "string",
      "defaultValue": "westcentralus"
    },
    "resourceGroupName": {
      "type": "string",
      "defaultValue": "rg_vnet_hbi_w1"
    },
    "vnetName": {
      "type": "string",
      "defaultValue": "vnet_hbi_w1",
      "metadata": { "description": "AzureFoundation VNET Name for virtual data center subscription in a specific data center." }
    },
    "vnetAddressPrefix": {
      "type": "string",
      "defaultValue": "10.128.16.0/20",
      "metadata": { "description": "AzureFoundation VNET Address Prefix, the range of addresses for a specific data center." }
    },
    "dnsServers": {
      "type": "array",
      "defaultValue": [ "10.128.59.36" ],
      "metadata": { "description": "AzureFoundation Domain Controller DNS server" }
    },


    /*
    Using the metadata spreadsheet, the Subnet tab, filter results on VNET102, 
    Select the columnns that contain the word template and are color coded accordingly.
    */
    "subnet210Prefix": {
      "type": "string",
      "defaultValue": "10.128.80.0/24",
      "metadata": { "description": "HTTP and HTTPS services" }
    },
    "subnet210Name": {
      "type": "string",
      "defaultValue": "s210_Web_HBI_slgmac_W2",
      "metadata": { "description": "HTTP and HTTPS services" }
    },
    "subnet210NSG": {
      "type": "string",
      "defaultValue": "210_NSG_Web",
      "metadata": { "description": "NSG: HTTP and HTTPS services" }
    },
    "subnet215Prefix": {
      "type": "string",
      "defaultValue": "10.128.81.0/24",
      "metadata": { "description": "Loadbalanced HTTP and HTTPS Services" }
    },
    "subnet215Name": {
      "type": "string",
      "defaultValue": "s215_LB_Web_HBI_slgmac_W2",
      "metadata": { "description": "Loadbalanced HTTP and HTTPS Services" }
    },
    "subnet215NSG": {
      "type": "string",
      "defaultValue": "215_NSG_LB_Web",
      "metadata": { "description": "NSG: Loadbalanced HTTP and HTTPS Services" }
    },
    "subnet220Prefix": {
      "type": "string",
      "defaultValue": "10.128.82.0/24",
      "metadata": { "description": "Web Services, OEM applications" }
    },
    "subnet220Name": {
      "type": "string",
      "defaultValue": "s220_App_HBI_slgmac_W2",
      "metadata": { "description": "Web Services, OEM applications" }
    },
    "subnet220NSG": {
      "type": "string",
      "defaultValue": "220_NSG_App",
      "metadata": { "description": "NSG: Web Services, OEM applications" }
    },
    "subnet225Prefix": {
      "type": "string",
      "defaultValue": "10.128.83.0/24",
      "metadata": { "description": "Loadbalaned Web Services, OEM applications" }
    },
    "subnet225Name": {
      "type": "string",
      "defaultValue": "s225_LB_App_HBI_slgmac_W2",
      "metadata": { "description": "Loadbalaned Web Services, OEM applications" }
    },
    "subnet225NSG": {
      "type": "string",
      "defaultValue": "225_NSG_LB_App",
      "metadata": { "description": "NSG: Loadbalaned Web Services, OEM applications" }
    },
    "subnet230Prefix": {
      "type": "string",
      "defaultValue": "10.128.84.0/24",
      "metadata": { "description": "Data for Applications" }
    },
    "subnet230Name": {
      "type": "string",
      "defaultValue": "s230_DB_HBI_slgmac_W2",
      "metadata": { "description": "Data for Applications" }
    },
    "subnet230NSG": {
      "type": "string",
      "defaultValue": "230_NSG_DB",
      "metadata": { "description": "NSG: Data for Applications" }
    },
    "subnet235Prefix": {
      "type": "string",
      "defaultValue": "10.128.85.0/24",
      "metadata": { "description": "Loadbalanced Databases" }
    },
    "subnet235Name": {
      "type": "string",
      "defaultValue": "s235_LB_DB_HBI_slgmac_W2",
      "metadata": { "description": "Loadbalanced Databases" }
    },
    "subnet235NSG": {
      "type": "string",
      "defaultValue": "235_NSG_LB_DB",
      "metadata": { "description": "NSG: Loadbalanced Databases" }
    },
    "subnet250Prefix": {
      "type": "string",
      "defaultValue": "10.128.86.0/24",
      "metadata": { "description": "Internet EndPoint Machines" }
    },
    "subnet250Name": {
      "type": "string",
      "defaultValue": "s250_DMZ_HBI_slgmac_W2",
      "metadata": { "description": "Internet EndPoint Machines" }
    },
    "subnet250NSG": {
      "type": "string",
      "defaultValue": "250_NSG_DMZ",
      "metadata": { "description": "NSG: Internet EndPoint Machines" }
    },
    "subnet255Prefix": {
      "type": "string",
      "defaultValue": "10.128.87.0/24",
      "metadata": { "description": "Loadbalaned Internet Endpoint systems" }
    },
    "subnet255Name": {
      "type": "string",
      "defaultValue": "s255_LB_DMZ_HBI_slgmac_W2",
      "metadata": { "description": "Loadbalaned Internet Endpoint systems" }
    },
    "subnet255NSG": {
      "type": "string",
      "defaultValue": "255_NSG_LB_DMZ",
      "metadata": { "description": "NSG: Loadbalaned Internet Endpoint systems" }
    },
    "subnet260Prefix": {
      "type": "string",
      "defaultValue": "10.128.90.0/25",
      "metadata": { "description": "Tier 0 - Direct Control of enterprise identities in the environment. Tier 0 includes accounts, groups, and other assets that have direct or indirect administrative control of the Active Directory forest, domains, or domain controllers, and all the assets in it. The security sensitivity of all Tier 0 assets is equivalent as they are all effectively in control of each other" }
    },
    "subnet260Name": {
      "type": "string",
      "defaultValue": "s260_User_Tier0_HBI_slgmac_W2",
      "metadata": { "description": "Tier 0 - Direct Control of enterprise identities in the environment. Tier 0 includes accounts, groups, and other assets that have direct or indirect administrative control of the Active Directory forest, domains, or domain controllers, and all the assets in it. The security sensitivity of all Tier 0 assets is equivalent as they are all effectively in control of each other" }
    },
    "subnet260NSG": {
      "type": "string",
      "defaultValue": "260_NSG_User_Tier0",
      "metadata": { "description": "NSG: Tier 0 - Direct Control of enterprise identities in the environment. Tier 0 includes accounts, groups, and other assets that have direct or indirect administrative control of the Active Directory forest, domains, or domain controllers, and all the assets in it. The security sensitivity of all Tier 0 assets is equivalent as they are all effectively in control of each other" }
    },
    "subnet261Prefix": {
      "type": "string",
      "defaultValue": "10.128.90.128/25",
      "metadata": { "description": "Tier 1 administrator - manage enterprise servers, services, and applications" }
    },
    "subnet261Name": {
      "type": "string",
      "defaultValue": "s261_User_Tier1_HBI_slgmac_W2",
      "metadata": { "description": "Tier 1 administrator - manage enterprise servers, services, and applications" }
    },
    "subnet261NSG": {
      "type": "string",
      "defaultValue": "261_NSG_User_Tier1",
      "metadata": { "description": "NSG: Tier 1 administrator - manage enterprise servers, services, and applications" }
    },

    /*using the metadata spreadsheet, tab Connections, filter on VNET101
    select the Template columns grouped by color */
    "ConnectionNamecnct110": {
      "type": "string",
      "defaultValue": "Peering_mac_slg_HBI_To_Services_W1",
      "metadata": { "description": "Arbitrary name for the new connection between an Azure VNet and another network" }
    },
    "vnetNamecnct110": {
      "type": "string",
      "defaultValue": "vnet_hbi_w1",
      "metadata": { "description": "Azure VNET of the current location" }
    },
    "connectionType1cnct110": {
      "type": "string",
      "defaultValue": "Peering",
      "metadata": { "description": "The type of connection. For connecting to ExpressRoute circuits, the connectionType must be of type ExpressRoute. Other types are IPsec and Vnet2Vnet." }
    },
    "allowVNETAccesscnct110": {
      "type": "bool",
      "defaultValue": true,
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "allowFwdAccesscnct110": {
      "type": "bool",
      "defaultValue": true,
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "allowGWAccesscnct110": {
      "type": "bool",
      "defaultValue": false,
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "useRemoteGatewaycnct110": {
      "type": "bool",
      "defaultValue": true,
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "peerVNETNamecnct110": {
      "type": "string",
      "defaultValue": "vnet_services_w1",
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "rmtSubIDcnct110": {
      "type": "string",
      "defaultValue": "730f26b5-ebf5-4518-999f-0b4eb0cdc8f9",
      "metadata": { "description": "The subscription ID of the peer VNET." }
    },
    "rmtRGNamecnct110": {
      "type": "string",
      "defaultValue": "rg_vnet_services_w1",
      "metadata": { "description": "The resource group for the remote subscription VNET." }
    },
    "rmtConnectionNamecnct110": {
      "type": "string",
      "defaultValue": "",
      "metadata": { "description": "The name of the remote connection." }
    },
    "rmtLocationcnct110": {
      "type": "string",
      "defaultValue": "westcentralus",
      "metadata": { "description": "The name of the remote location." }
    }



  },
  "variables": {
    "apiVersion": "2015-06-15",
    "vnetID": "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"

  },

  "resources": [
    /*Using the metadata spreadsheet, goto the NSGRules tab and filter to VNET101
    select all of the deployment columns, grouped by the same color.  */
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet210NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "210_NSG_Web" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet215NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "215_NSG_LB_Web" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet220NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "220_NSG_App" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet225NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "225_NSG_LB_App" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          },
          {
            "name": "http.Inbound.Allow",
            "properties": {
              "description": "http.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 2001,
              "direction": "Inbound"
            }
          },
          {
            "name": "https.Inbound.Allow",
            "properties": {
              "description": "https.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 2002,
              "direction": "Inbound"
            }
          },
          {
            "name": "TCP8080.Inbound.Allow",
            "properties": {
              "description": "TCP8080.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "8080",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 2003,
              "direction": "Inbound"
            }
          },
          {
            "name": "TCP19080.Inbound.Allow",
            "properties": {
              "description": "TCP19080.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "19080",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 3900,
              "direction": "Inbound"
            }
          },
          {
            "name": "SFCluster.Inbound.Allow",
            "properties": {
              "description": "SFCluster.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "19000",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 3910,
              "direction": "Inbound"
            }
          },
          {
            "name": "SFClusterRange.Inbound.Allow",
            "properties": {
              "description": "SFClusterRange.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "1025-1027",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 3920,
              "direction": "Inbound"
            }
          },
          {
            "name": "SFEpehemalRange.Inbound.Allow",
            "properties": {
              "description": "SFEpehemalRange.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "49125-65534",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 3930,
              "direction": "Inbound"
            }
          },
          {
            "name": "SFApplication.Inbound.Allow",
            "properties": {
              "description": "SFApplication.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "20000-30000",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 3940,
              "direction": "Inbound"
            }
          },
          {
            "name": "SFSMB.Inbound.Allow",
            "properties": {
              "description": "SFSMB.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "445",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 3950,
              "direction": "Inbound"
            }
          },
          {
            "name": "SFRDP.Inbound.Allow",
            "properties": {
              "description": "SFRDP.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389-4500",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 3960,
              "direction": "Inbound"
            }
          },
          {
            "name": "BlockAll.Inbound.Deny",
            "properties": {
              "description": "BlockAll.Inbound.Deny",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 4095,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet230NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "230_NSG_DB" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet235NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "235_NSG_LB_DB" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet250NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "250_NSG_DMZ" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet255NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "255_NSG_LB_DMZ" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet260NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "260_NSG_User_Tier0" },
      "properties": {
        "securityRules": [
          {
            "name": "SSH.Inbound.Allow",
            "properties": {
              "description": "SSH.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP.Inbound.Allow",
            "properties": {
              "description": "RDP.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          },
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet261NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "261_NSG_User_Tier1" },
      "properties": {
        "securityRules": [
          {
            "name": "SSH.Inbound.Allow",
            "properties": {
              "description": "SSH.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP.Inbound.Allow",
            "properties": {
              "description": "RDP.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          },
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },

    /*using the metadata spreadsheet, navigate  to the Subnet Tab and filter on VENT101
    select the columns wiht the word resource in the title, grouped by color.*/
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('vnetName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [],
      "tags": { "displayName": "AzureFoundation VNet Definition" },
      "properties": {
        "addressSpace": { "addressPrefixes": [ "[parameters('vnetAddressPrefix')]" ] },
        "subnets": [
          {
            "name": "[parameters('subnet210name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet210prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet210NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet215name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet215prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet215NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet220name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet220prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet220NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet225name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet225prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet225NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet230name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet230prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet230NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet235name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet235prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet235NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet250name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet250prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet250NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet255name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet255prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet255NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet260name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet260prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet260NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet261name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet261prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet261NSG'))]" }
            }
          }
        ],

        /*STOP WITH SUBNET TAB, goto the Connections TAB*/

        "resources": [
          /*Go to the Connection tab of the Metadata spreadsheet and filter on VNET 100
          select the Resources for Peering and past them below*/
          {
            "apiVersion": "2016-06-01",
            "type": "virtualNetworkPeerings",
            "name": "[parameters('ConnectionNamecnct110')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [ "[concat('/subscriptions/', parameters('rmtSubIDcnct110'), '/resourceGroups/', parameters('rmtRGNamecnct110'),'/providers/Microsoft.Network/virtualNetworks/',parameters('peerVNETNamecnct110'))]", "[concat('Microsoft.Networks/virtualNetworks/',parameters('vnetNamecnct110'))]" ],
            "comments": "Make sure you put these resources within the Resources of a VNET, like a subnet",
            "properties": {
              "allowVirtualNetworkAccess": "[parameters('allowVNETAccesscnct110')]",
              "allowForwardedTraffic": "[parameters('allowFwdAccesscnct110')]",
              "allowGatewayTransit": "[parameters('allowGWAccesscnct110')]",
              "useRemoteGateways": "[parameters('allowVNETAccesscnct110')]",
              "remoteVirtualNetwork": { "id": "[concat('/subscriptions/', parameters('rmtSubIDcnct110'), '/resourceGroups/', parameters('rmtRGNamecnct110'),'/providers/Microsoft.Network/virtualNetworks/',parameters('peerVNETNamecnct110'))]" }
            }
          }

        ],
        "dhcpOptions": { "dnsServers": [ "10.128.59.36" ] },
        "dependsOn": [
          /*Using the metadata template on the Subnet Tab, filter to VNET104 and select
          the columns with DependsOn and grouped by color*/
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet210NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet215NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet220NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet225NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet230NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet235NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet250NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet255NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet260NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet261NSG'))]"

        ]
      }
    }
  ],
  "outputs": {
  }
}
